@@ -329,10 +329,6 @@ sub _reference_links {
         title    => 'CPAN\'s request tracker (report bugs here)',
         link     => 'https://rt.cpan.org/NoAuth/Bugs.html?Dist=%s',
       },
-      { nickname => 'AnnoCPAN',
-        title    => 'Annotated CPAN documentation',
-        link     => 'http://annocpan.org/dist/%s',
-      },
       { title    => 'CPAN Ratings',
         link     => 'https://cpanratings.perl.org/d/%s',
       },
