@@ -30,9 +30,6 @@ You can also look for information at:
     GitHub issue tracker
         https://github.com/xsawyerx/module-starter/issues
 
-    AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/Foo-Bar
-
     CPAN Ratings
         http://cpanratings.perl.org/d/Foo-Bar
 
